feat: allSimplePaths support exclusion list of edge types
Fixed issue #3937

(cherry picked from commit 8bd74916dc59dadadd6f50b1b727f12db8ffc361)